force-app/libs/action-queue/objects/Action__c/Action__c.object-meta.xml
<CustomObject>
    <label>Action</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>