force-app/libs/action-queue/objects/Action__c/fields/DML_With_Setup_Objects__c.field-meta.xml
<CustomField>
    <fullName>DML_With_Setup_Objects__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DML With Setup Objects</label>
    <type>Checkbox</type>
</CustomField>