force-app/libs/action-queue/objects/Action__c/fields/Number_Of_Repetitions__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Repetitions__c</fullName>
    <label>Number Of Repetitions</label>
    <summaryForeignKey>Execution_History__c.Action__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>