force-app/libs/action-queue/objects/Action__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Execution_Time__c</columns>
    <columns>Number_Of_Repetitions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>